--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "firebase": "^11.0.2",
     "vue": "^3.5.13",
     "vue-router": "^4.4.5",
     "zod": "^3.23.8"
