--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "firebase": "^11.0.2",
+    "pinia": "^2.2.8",
     "vue": "^3.5.13",
     "vue-router": "^4.4.5",
     "zod": "^3.23.8"
